--- a/src/app/home/components/carousel/carousel.component.html
+++ b/src/app/home/components/carousel/carousel.component.html
@@ -1,6 +1,6 @@
 <div class="carousel">
   <div class="carousel__line"></div>
-  <carousel class="carousel_element" [autoplay]="true" [cellWidth]="550" [margin]="45" [loop]="true" class="carousel"
+  <!-- <carousel class="carousel_element" [autoplay]="true" [cellWidth]="550" [margin]="45" [loop]="true" class="carousel"
     [height]="350">
     <div class="carousel-cell carousel_element__cell">
       <img class="carousel_element__cell__img object-cover" draggable="false"
@@ -14,5 +14,5 @@
       <img class=" carousel_element__cell__img object-cover" draggable="false"
         src="../../../../assets/Villa Gesell/IMG_6756.JPEG" />
     </div>
-  </carousel>
+  </carousel> -->
 </div>
