--- a/src/app/home/components/card-descripcion/card-descripcion.component.html
+++ b/src/app/home/components/card-descripcion/card-descripcion.component.html
@@ -1,6 +1,15 @@
 <div class="card_container">
     <div class="card_container__2">
         <div>
+            <div class="card_container__2__text_area">
+                <h1 class="card_container__2__text_area__tittle">
+                    Donde alojarte en Villa Gesell
+                </h1>
+                <p class="card_container__2__text_area__paragraph">
+                    En inmejorable ubicación del coqueto barrio de punta norte, rodeado de exclusivos complejos
+                    habitacionales: Alquila una cabaña Chimay!
+                </p>
+            </div>
             <mat-card class="card_container__2__card">
                 <mat-card-content>
                     <div class="card_container__2__card__content">
@@ -32,18 +41,6 @@
                 </mat-card-content>
             </mat-card>
         </div>
-        <div class="card_container__2__text_area">
-            <h1 class="card_container__2__text_area__tittle">
-                Descripción
-            </h1>
-            <p class="card_container__2__text_area__paragraph">
-                En inmejorable ubicación del coqueto barrio de punta norte,
-                rodeado de exclusivos complejos habitacionales, cabañas CHIMAY a
-                tan solo 100mts.del mar unidades de 3ambientes en 2plantas 80M2 2
-                dormitorios 2 baños amplio fondo parquizado e independiente parrilla
-                deck-solarium estacionamiento asignado alarma monitoreada caja de
-                seguridad totalmente equipadas para 6pax.
-            </p>
-        </div>
+
     </div>
 </div>
