--- a/src/app/home/components/hero/hero.component.html
+++ b/src/app/home/components/hero/hero.component.html
@@ -2,13 +2,12 @@
     <div class="hero__content">
         <h1 class="hero__content__tittle">
             Cabañas
-            <b class="hero__content__tittle__b">Chimay</b>
+            <span class="hero__content__tittle__span">Chimay</span>
         </h1>
         <h2 class="hero__content__subtittle">
-            Alquiler de cabaña
+            Alquiler
         </h2>
         <a routerLink="/calendar" class="hero__content__button_link" mat-fab extended>
-            <mat-icon>favorite</mat-icon>
             Consultar Disponibilidad
         </a>
     </div>
