--- a/src/app/home/pages/home/home.component.html
+++ b/src/app/home/pages/home/home.component.html
@@ -5,9 +5,7 @@
     <div class="container">
         <app-card-descripcion></app-card-descripcion>
         <app-carousel></app-carousel>
-        <div class="home__map">
-            <app-map></app-map>
-        </div>
+        <app-card-info></app-card-info>
     </div>
 </div>
 <app-footer></app-footer>
