--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
 mat-sidenav-content {
-  background-color: var(--primary-color) !important;
+  background-color: var(--background) !important;
   min-height: 100vh;
 }
