--- a/src/app/home/components/card-descripcion/card-descripcion.component.css
+++ b/src/app/home/components/card-descripcion/card-descripcion.component.css
@@ -1,15 +1,17 @@
 .card_container {
-  padding: 56px 25px;
+  padding: 20px 0;
 }
 .card_container__2 {
-  display: grid;
+  display: flex;
   gap: 16px;
-  grid-template-columns: 1fr 1fr;
   align-items: center;
+  flex-direction: column;
 }
 .card_container__2__card {
-  background: var(--secondary-color);
-  color: var(--white);
+  background: var(--primary-color);
+  margin-top: 60px;
+  color: var(--black);
+  border: 1px solid #472302;
 }
 .card_container__2__card__content {
   display: grid;
@@ -22,14 +24,18 @@
   gap: 16px;
   align-items: center;
   text-align: center;
+  font-weight: 400;
 }
 .card_container__2__text_area {
+  text-align: center;
   margin: 0 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .card_container__2__text_area__tittle {
-  color: var(--text-primary-color);
-
-  /* text-text_primary after:border-secondary border-b-2 */
+  color: var(--black);
+  font-weight: 500;
 }
 .card_container__2__text_area__tittle:after {
   content: "";
@@ -37,8 +43,11 @@
   border-bottom: 2px solid var(--secondary-color);
 }
 .card_container__2__text_area__paragraph {
-  color: var(--text-primary-color);
+  color: var(--black);
   font-size: 18px;
+  font-weight: 500;
+  margin-top: 40px;
+  width: 75%;
 }
 @media screen and (max-width: 860px) {
   .card_container__2 {
@@ -49,5 +58,10 @@
 @media screen and (max-width: 992px) {
   .card_container__2__text_area {
     margin: 0;
+  }
+}
+@media screen and (max-width: 576px) {
+  .card_container__2__card__content {
+    grid-template-columns: 1fr;
   }
 }
