--- a/src/app/home/components/hero/hero.component.css
+++ b/src/app/home/components/hero/hero.component.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Arizonia&family=Mulish&display=swap");
+
 .hero {
   align-items: center;
   display: flex;
@@ -18,20 +20,22 @@
   line-height: 1.2;
   margin-bottom: 2rem;
 }
-.hero__content__tittle__b {
-  color: var(--primary-color);
+.hero__content__tittle__span {
+  font-family: "Arizonia", cursive;
 }
 .hero__content__subtittle {
   color: var(--white);
   font-size: 5.5rem;
   line-height: 1;
   margin-bottom: 2rem;
+  font-weight: 300;
 }
 .hero__content__button_link {
   width: 75%;
   height: 56px;
-  background: var(--black);
+  background: rgba(0, 0, 0, 0.60);
   font-size: 16px;
+  font-weight: 100;
 }
 @media screen and (max-width: 992px) {
   .hero__content__tittle {
@@ -73,7 +77,7 @@
     font-size: 12px;
   }
 }
-@media (max-width: 420px){
+@media (max-width: 420px) {
   .hero__content__tittle {
     font-size: 2.2rem;
   }
