--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,26 @@
 <div class="footer">
-    <h1>Chimay</h1>
+    <div class="footer_container container">
+        <div class="footer__icons">
+            <a #tooltip="matTooltip" matTooltip="Contactar por facebook" [matTooltipPosition]="position.value!"
+                target="_blank" class="footer_icons__a" href="https://msng.link/o/?marcela.blanchi=fm" mat-icon-button
+                color="warn" color="primary" aria-label="delete rent icon">
+                <mat-icon class="footer__icon">facebook</mat-icon>
+            </a>
+            <a #tooltip="matTooltip" matTooltip="Contactar por Whatsapp" [matTooltipPosition]="position.value!"
+                target="_blank" class="footer_icons__a"
+                href="https://api.whatsapp.com/send?phone=+541164660222&text=¡Buen día! Estoy interesado en comunicarme con usted"
+                mat-icon-button color="warn" color="primary" aria-label="delete rent icon">
+                <mat-icon class="footer__icon">messenger</mat-icon>
+            </a>
+            <a #tooltip="matTooltip" matTooltip="Contactar por E-Mail" [matTooltipPosition]="position.value!"
+                target="_blank" class="footer_icons__a" href="mailto:marcelablanchi@hotmail.com" mat-icon-button
+                color="warn" color="primary" aria-label="delete rent icon">
+                <mat-icon class="footer__icon">email</mat-icon>
+            </a>
+        </div>
+        <img class="footer__logo__img" draggable="false" src="../../../assets/Cabaña-Gesell.png"
+            alt="Logo Cabaña Gesell" />
+        <h1 class="footer__text">Desarrollado por Federico Gerardi</h1>
+
+    </div>
 </div>
