--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -1,16 +1,27 @@
 .nav {
-  align-items: center;
   backdrop-filter: blur(5px);
-  background-color: rgba(127, 71, 61, 0.95);
-  display: flex;
-  gap: 16px;
   height: 112px;
-  justify-content: space-between;
   left: 0;
   padding: 10px 25px;
   position: fixed;
   top: 0;
   z-index: 2;
+  transition: background-color 0.5s ease-in-out;
+}
+.nav.home {
+  background-color: rgba(202, 173, 146, 0.41);
+}
+.nav.no-home {
+  background-color: rgba(127, 71, 61, 0.95) !important;
+}
+.nav.scroll {
+  background-color: rgba(127, 71, 61, 0.95);
+}
+.nav__container {
+  align-items: center;
+  display: flex;
+  gap: 16px;
+  justify-content: space-between;
 }
 .nav__logo {
   cursor: pointer;
@@ -19,11 +30,13 @@
 .nav__logo__img {
   height: auto;
   object-fit: contain;
-  width: 192px;
+  width: 250px;
+}
+.nav__div_responsive {
+  display: none;
 }
 .nav__button_responsive {
   color: var(--white);
-  display: none;
   height: auto;
   width: auto;
 }
@@ -32,34 +45,67 @@
   height: auto;
   width: auto;
 }
-.nav__links {
+/* navBar */
+.navMenu {
   display: flex;
-  flex: 1;
-  flex-direction: row;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: space-evenly;
+  position: relative;
+  width: 100%;
+  padding-right: 20px;
 }
-.nav__links__link {
+.navMenu a {
+  background-image: linear-gradient(
+    to right,
+    var(--white),
+    var(--white) 50%,
+    var(--white) 50%
+  );
+  background-size: 200% 100%;
+  background-position: -100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.3s ease-in-out;
   color: var(--white);
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
-  margin-left: 16px;
-  text-decoration: none;
+  font-weight: 300;
+  font-size: 22px;
 }
-.nav__logInOut_section {
+.navMenu a.active {
+  background-position: 0;
+}
+.navMenu a.active::before {
+  width: 100%;
+}
+.navMenu a:before {
+  content: "";
+  background: var(--white);
+  display: block;
+  position: absolute;
+  bottom: -32px;
+  left: 0;
+  width: 0;
+  height: 3px;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+.navMenu a:hover {
+  background-position: 0;
+}
+.navMenu a:hover::before {
+  width: 100%;
 }
 .nav__logInOut_section__contact {
   color: var(--white);
   display: flex;
 }
 @media (max-width: 820px) {
-  .nav__button_responsive {
+  .nav__div_responsive {
     display: block;
   }
   mat-icon {
     font-size: 40px !important;
   }
-  .nav__links {
+  .navMenu {
     display: none;
   }
   .nav__logInOut_section__contact {
@@ -72,20 +118,12 @@
   height: 300px;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
-
 .example-sidenav-content {
   display: flex;
   height: 100%;
   align-items: center;
   justify-content: center;
 }
-
 .example-sidenav {
   padding: 20px;
 }
-
-/* sm: "576px",
-md: "768px",
-lg: "992px",
-xl: "1200px",
-xxl: "1400px", */
