add features in map , contact modal and ux fix

--- a/src/app/admin/pages/admin/admin.component.html
+++ b/src/app/admin/pages/admin/admin.component.html
@@ -15,6 +15,10 @@
         <app-clients-table></app-clients-table>
         <mat-divider [inset]="true"></mat-divider>
         <app-rent-table></app-rent-table>
+        <mat-divider [inset]="true"></mat-divider>
+        <app-featured-form></app-featured-form>
+        <mat-divider [inset]="true"></mat-divider>
+        <app-featured-table></app-featured-table>
     </div>
 </div>
 <app-footer></app-footer>
