--- a/src/app/home/components/card-descripcion/card-descripcion.component.html
+++ b/src/app/home/components/card-descripcion/card-descripcion.component.html
@@ -1,4 +1,4 @@
-<div class="card_container">
+<section class="card_container">
     <div class="card_container__2">
         <div>
             <div class="card_container__2__text_area">
@@ -43,4 +43,4 @@
         </div>
 
     </div>
-</div>
+</section>
