--- a/src/app/home/components/card-info/card-info.component.html
+++ b/src/app/home/components/card-info/card-info.component.html
@@ -1,4 +1,4 @@
-<div class="card_container">
+<section class="card_container">
     <mat-card class="card_container__image">
         <mat-card-content class="card">
             <div class="card_container__2__text">
@@ -14,4 +14,4 @@
         </mat-card-content>
     </mat-card>
 
-</div>
+</section>
