--- a/src/app/home/components/carousel/carousel.component.html
+++ b/src/app/home/components/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<div class="carousel">
+<section class="carousel">
   <div class="carousel__line"></div>
   <owl-carousel-o [options]="customOptions">
     <ng-container *ngFor="let slide of images">
@@ -12,4 +12,4 @@
       Ver Más
     </button>
   </div>
-</div>
+</section>
