--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -1,6 +1,6 @@
-<div class="hero-bg ">
+<header class="hero-bg ">
     <div class="container">
         <app-navbar></app-navbar>
         <app-hero></app-hero>
     </div>
-</div>
+</header>
