--- a/src/app/mapa/pages/map-screen/map-screen.component.html
+++ b/src/app/mapa/pages/map-screen/map-screen.component.html
@@ -21,8 +21,8 @@
                 </app-card-map-info>
             </div>
         </ng-template>
-
-
+        <mat-divider class="divider-featured"></mat-divider>
+        <app-featured-locations></app-featured-locations>
     </ng-template>
 
 </div>
