--- a/src/app/calendar/pages/calendar/calendar.component.css
+++ b/src/app/calendar/pages/calendar/calendar.component.css
@@ -10,9 +10,22 @@ pre {
   padding: 128px 0;
   /* py-32  */
 }
-.calendar__padding{
+.calendar__padding {
   margin-top: 32px;
   background-color: var(--white);
   padding: 16px;
   border-radius: 8px;
+}
+.form-div {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  align-items: center;
+  margin: 32px 0;
+}
+
+@media (max-width: 522px) {
+  .form-div {
+    justify-content: center;
+  }
 }
