--- a/src/app/home/pages/home/home.component.html
+++ b/src/app/home/pages/home/home.component.html
@@ -4,7 +4,12 @@
     </div>
     <div class="container">
         <app-card-descripcion></app-card-descripcion>
+    </div>
+    <div class="container">
         <app-carousel></app-carousel>
+    </div>
+    <app-contact-banner></app-contact-banner>
+    <div class="container">
         <app-card-info></app-card-info>
     </div>
 </div>
