--- a/src/app/mapa/pages/map-screen/map-screen.component.css
+++ b/src/app/mapa/pages/map-screen/map-screen.component.css
@@ -18,6 +18,9 @@
 .map_container__map_text_info {
   margin-top: 24px;
 }
+.divider-featured {
+  margin: 50px 0;
+}
 @media screen and (max-width: 768px) {
   .map_container {
     padding: 175px 60px 50px 60px;
