--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -28,6 +28,11 @@
   width: 35px;
   height: auto;
 }
+.footer_icons__a {
+  height: 48px;
+  width: 48px;
+  padding: 0 !important;
+}
 .footer_icons__a:hover {
   transition: all 0.3s ease-in-out;
   transform: scale(1.2);
@@ -37,7 +42,19 @@
   text-align: center;
   margin-bottom: 0;
 }
+.logo-whatsapp {
+  height: 48px;
+  width: 48px;
+  object-fit: contain;
+}
 @media (max-width: 768px) {
+  .footer_container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 25px;
+    justify-content: space-around;
+  }
   .footer {
     flex-direction: column;
     align-items: center;
