--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -5,7 +5,7 @@
   padding: 10px 25px;
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 99;
   transition: background-color 0.5s ease-in-out;
 }
 .nav.home {
@@ -98,7 +98,52 @@
   color: var(--white);
   display: flex;
 }
-@media (max-width: 820px) {
+.nav__links__link.disponibilidad {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.navMenu a span:nth-child(2) {
+  background-image: linear-gradient(
+    to right,
+    var(--white),
+    var(--white) 50%,
+    var(--white) 50%
+  );
+  background-size: 200% 100%;
+  background-position: -100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.3s ease-in-out;
+  color: var(--white);
+  font-weight: 300;
+  font-size: 22px;
+}
+.navMenu a.active span:nth-child(2) {
+  background-position: 0;
+}
+.navMenu a.active span:nth-child(2)::before {
+  width: 100%;
+}
+.navMenu a span:nth-child(2):before {
+  content: "";
+  background: var(--white);
+  display: block;
+  position: absolute;
+  bottom: -32px;
+  left: 0;
+  width: 0;
+  height: 3px;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+.navMenu a:hover span:nth-child(2) {
+  background-position: 0;
+}
+.navMenu a:hover span:nth-child(2)::before {
+  width: 100%;
+}
+@media (max-width: 992px) {
   .nav__div_responsive {
     display: block;
   }
@@ -110,6 +155,17 @@
   }
   .nav__logInOut_section__contact {
     display: none;
+  }
+  .nav__logInOut_section {
+    display: none;
+  }
+}
+@media (max-width: 578px) {
+  .nav__logo__img {
+    width: 200px;
+  }
+  .nav__logo {
+    margin-right: 20px;
   }
 }
 /* sidenav */
