fix calendar input

--- a/src/app/mapa/pages/map-screen/map-screen.component.html
+++ b/src/app/mapa/pages/map-screen/map-screen.component.html
@@ -13,7 +13,7 @@
             <!-- <h1 class="absolute top-0 left-0">aeg</h1> -->
         </app-map-view>
         <div *ngIf="!infoMapReady; else notInfo">
-            <p class="map_container__map_text_info">Aga click en el boton para calcular la ruta</p>
+            <p class="map_container__map_text_info">Haga click en el boton para calcular la ruta</p>
         </div>
         <ng-template #notInfo>
             <div class="map_container__map_text_info">
